[projects] fixed spacing for mobile

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -186,6 +186,13 @@ $section-height: 400px;
   box-shadow: 0 .5px 1px rgba(0,0,0,0.10), 0 .5px .5px rgba(0,0,0,0.20);
 }
 
+@media (max-width: 991.98px) {
+  .project {
+    margin-bottom: 40px;
+  }
+}
+
+
 // CONTACT //
 .contact {
   height: 325px;
